--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+{% include table.html %}
+
 {% if page.mathjax %}
 <script type="text/javascript"
     src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
