_layouts/post.html: Update post-share
Signed-off-by: ziyaoxie <ziyaoxie@outlook.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			{% if site.author.linkedin %}
 				<a href="https://linkedin.com/in/{{site.author.linkedin}}" target="_blank"><img src="assets/images/icon/linkedin.svg" class="social-icon"></a>
 			{% endif %}
-			<a href="about"><img src="assets/images/icon/me.svg" class="social-icon"></a>
+			<a href="about"><img src="assets/images/icon/mail.svg" class="social-icon"></a>
 			<br>
 			{{ site.author.bio }}
 			<br>
