--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,9 +13,15 @@ layout: default
 	<div class="post-date">{{ page.date | date: "%d.%m.%Y" }}</div>
 	<div class="post-share">
 		Share:&nbsp;
-		<a href="https://twitter.com/intent/tweet?source=tweetbutton&amp;original_referer={{site.url}}/{{page.slug}}&amp;text={{page.title}} - {{site.url}}/{{page.slug}}" target="_blank"><img src="assets/images/icon/twitter.svg" class="social-icon"></a>
-		<a href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}/{{page.slug}}" target="_blank"><img src="assets/images/icon/facebook.svg" class="social-icon"></a>
-		<a href="https://api.whatsapp.com/send?text={{site.url}}/{{page.slug}}" target="_blank"><img src="assets/images/icon/whatsapp.svg" class="social-icon"></a>
+		<a href="https://twitter.com/intent/tweet?source=tweetbutton&amp;original_referer={{site.url}}/{{page.slug}}&amp;text={{page.title}} - {{site.url}}/{{page.slug}}" target="_blank">
+			<img src="assets/images/icon/twitter.svg" class="social-icon">
+		</a>
+		<a href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}/{{page.slug}}" target="_blank">
+			<img src="assets/images/icon/facebook.svg" class="social-icon">
+		</a>
+		<a href="mailto:?subject={{page.title}}&body={{site.url}}/{{page.slug}}" target="_blank">
+			<img src="assets/images/icon/mail.svg" class="social-icon">
+		</a>
 	</div>
 </div>
 
