--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,9 +31,17 @@ layout: default
 	{{ content }}
 </div>
 
-<div class="tags-container">
+<div class="tags-container-categories">
+	<a href="{{ site.url }}{{ site.baseurl }}/categories/" class="post-tag">类别</a>:
+	{% for category in page.categories %}
+	<a href="{{ site.url }}{{ site.baseurl }}/categories/#{{category | cgi_escape}}" class="post-tag">{{category}}</a>{% unless forloop.last %}, {% endunless %}
+	{% endfor %}
+</div>
+
+<div class="tags-container-tags">
+	<a href="{{ site.url }}{{ site.baseurl }}/tags/" class="post-tag">标签</a>:
 	{% for tag in page.tags %}
-		<a href="{{ site.url }}{{ site.baseurl }}/tags/#{{tag | cgi_escape}}" class="post-tag">{{tag}}</a>{% unless forloop.last %}, {% endunless %}
+	<a href="{{ site.url }}{{ site.baseurl }}/tags/#{{tag | cgi_escape}}" class="post-tag">{{tag}}</a>{% unless forloop.last %}, {% endunless %}
 	{% endfor %}
 </div>
 
