bugfix: Fix baidu-analysis
Signed-off-by: ziyaoxie <ziyaoxie@outlook.com>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,27 +6,6 @@
 		}
 	</script>
 
-	{% if site.google_analytics %}
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{site.google_analytics}}"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', '{{site.google_analytics}}');
-    </script>
-	{% endif %}
-
-	{% raw %}
-	<script>
-		var _hmt = _hmt || [];
-		(function() {
-			var hm = document.createElement("script");
-			hm.src = "https://hm.baidu.com/hm.js?{{site.baidu_tmid}}";
-			var s = document.getElementsByTagName("script")[0];
-			s.parentNode.insertBefore(hm, s);
-		})();
-	</script>
-	{% endraw %}
+	{% include baidu-analysis.html %}
 </body>
 </html>
